recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: too many arguments for method getCouleur: ()java.awt.Color
   	if(getCouleur(!Color.black)){
                     ^